_generated-doc/3.0/config/quarkus-elytron-security-ldap-config-dir-context-config.adoc

:summaryTableId: quarkus-elytron-security-ldap-config-dir-context-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-ldap-config-dir-context-config_configuration]]link:#quarkus-elytron-security-ldap-config-dir-context-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.url]]`link:#quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.url[quarkus.security.ldap.dir-context.url]`

[.description]
--
The url of the ldap server

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.principal]]`link:#quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.principal[quarkus.security.ldap.dir-context.principal]`

[.description]
--
The principal: user which is used to connect to ldap server (also named "bindDn")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PRINCIPAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PRINCIPAL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.password]]`link:#quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.password[quarkus.security.ldap.dir-context.password]`

[.description]
--
The password which belongs to the principal (also named "bindCredential")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.referral-mode]]`link:#quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.referral-mode[quarkus.security.ldap.dir-context.referral-mode]`

[.description]
--
how ldap redirects are handled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_REFERRAL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_REFERRAL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`ignore`, `follow`, `throw` 
|`ignore`


a| [[quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.connect-timeout]]`link:#quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.connect-timeout[quarkus.security.ldap.dir-context.connect-timeout]`

[.description]
--
The connect timeout

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5S`


a| [[quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.read-timeout]]`link:#quarkus-elytron-security-ldap-config-dir-context-config_quarkus.security.ldap.dir-context.read-timeout[quarkus.security.ldap.dir-context.read-timeout]`

[.description]
--
The read timeout

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
